package com.example.labs_tasks1;

public interface Aggregate {
    Iterator getIterator();
}