package com.example.labs_tasks1;

public interface Iterator {
    boolean hasNext();
    Object next();
}